# ChangeLog for net-www/mozilla-launcher
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla-launcher/ChangeLog,v 1.4 2004/05/02 21:01:47 agriffis Exp $

*mozilla-launcher-1.3 (02 May 2004)

  02 May 2004; Aron Griffis <agriffis@gentoo.org> mozilla-launcher-1.2.ebuild,
  +mozilla-launcher-1.3.ebuild:
  New version 1.3, do URL fixups required for 1.7_rc1, remove
  deprecated environment stuff for mozilla.  Mark 1.2 stable on mips
  to bring it up to date with other arches.

  24 Apr 2004; Bret Curtis <psi29a@gentoo.org> mozilla-launcher-1.2.ebuild:
  Added to ~mips

*mozilla-launcher-1.2 (27 Mar 2004)

  27 Mar 2004; Aron Griffis <agriffis@gentoo.org> mozilla-launcher-1.2.ebuild:
  Don't use detection or fake_user for remote displays because it takes too long
  (4 minutes in one test)

*mozilla-launcher-1.1 (23 Mar 2004)

  23 Mar 2004; Aron Griffis <agriffis@gentoo.org> mozilla-launcher-1.1.ebuild:
  New ebuild for mozilla-launcher; a script to launch either firefox or mozilla
