@@ -1,8 +1,10 @@
 MD5 eca6a593c9977042e3990f8f68e4d77e mozilla-launcher-1.2.ebuild 513
 MD5 387b714448d2ec5e45aaf4240327164a mozilla-launcher-1.1.ebuild 508
 MD5 7cbb7e19da32ff0f9ab8a3b3991cd045 mozilla-launcher-1.3.ebuild 520
-MD5 64e32d12fbc32c729469d79262009352 ChangeLog 1071
+MD5 04f5de1a458d54c956b4ff63a00df07d mozilla-launcher-1.5.ebuild 520
+MD5 e8e79219e7bac4ea495199a9ba79025a ChangeLog 1301
 MD5 687acc9510df1671d359ab3d3ce731e9 metadata.xml 205
 MD5 c9c9aee058b2f308eff916719ae225cc files/digest-mozilla-launcher-1.1 67
 MD5 6429df283a10123bbb4cd8ecbd8dee3f files/digest-mozilla-launcher-1.2 67
 MD5 4854c99cfdbbb9d538fcff81f56af01f files/digest-mozilla-launcher-1.3 67
+MD5 c158fdd0a24e7123730e6812092fdc16 files/digest-mozilla-launcher-1.5 67
