@@ -1,8 +1,8 @@
-MD5 ea41b4d32e5a2a0acb6698cffbc7df86 mozilla-1.7_rc1-r1.ebuild 15836
+MD5 2704c0cce1c2954a146d45d8f08b187c mozilla-1.7_rc1-r1.ebuild 15836
 MD5 2078a4dd1a04cbc825ff7d3c827f0121 mozilla-1.7_beta-r1.ebuild 15917
 MD5 c908bcb957951df24e164b510db5dd3c mozilla-1.6-r1.ebuild 17204
 MD5 9443cf39e51d3c43bda236414dc5f6e5 mozilla-1.7_rc1.ebuild 16359
-MD5 db30ccbc7bf190b4e06ceced71bfe7d0 ChangeLog 29418
+MD5 c90b0c6153a8e86890bad8a621cd0e42 ChangeLog 29559
 MD5 ce23390351fe8020387d93ee29e09a3d metadata.xml 160
 MD5 e816a98fb3581a6d4a050aa4cdf12905 files/mozilla-1.7-amd64.patch 25433
 MD5 d0e52abf109fe61c4195f0cbf002ae18 files/google.src 706
