@@ -1,6 +1,13 @@
 # ChangeLog for net-www/mozilla-launcher
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla-launcher/ChangeLog,v 1.4 2004/05/02 21:01:47 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla-launcher/ChangeLog,v 1.5 2004/05/03 02:56:56 agriffis Exp $
+
+*mozilla-launcher-1.5 (02 May 2004)
+
+  02 May 2004; Aron Griffis <agriffis@gentoo.org>
+  +mozilla-launcher-1.5.ebuild:
+  Workaround comma-space problem in mozilla-1.7_rc1 and auto-detect xremote
+  capability to do -a programname
 
 *mozilla-launcher-1.3 (02 May 2004)
 
